--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
+/* Generic styles */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .App {
-  text-align: center;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+	margin: 0;
+	padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+	height: 100vh;
+	width: 100vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+* {
+	box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+div {
+	height: 100%;
+	width: 100%;
+
+	/* example padding, font-size, background, etc */
+	padding: 10px;
+	font-size: 20px;
+	background: #ffe7e7;
+}
+/* html,
+#root,
+.App {
+	height: 100vh;
+	padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+	min-height: 100vh;
+	padding: 0;
+} */
+
+/* body > #root > div {
+	height: 100vh;
+} */
+
+/* html,
+body,
+#root,
+.App {
+	height: 100vh;
+}
+
+div {
+	height: 100%;
+	width: 100%;
+} */
+
+h1 {
+	font-weight: 900;
+	font-size: 5rem;
+}
+
+button,
+input[type="submit"],
+input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+*:focus {
+	outline: none;
 }
