Created Subscriptions Page

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  background-color: rgb(5, 0, 255);
+  width: 100%;
+  height: 70px;
+  font-size: 10px;
+  margin-bottom: 30px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.headerButtons {
+  display: flex;
+  align-items: center;
+}
+
+.text {
+  color: aliceblue;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.subscriptions {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.subscriptionPage {
+  background-color: rgb(255, 231, 231);
+}
+.recommendationBox {
+  background-color: rgb(255, 255, 255);
+  width: 85%;
+  font-size: 10px;
+  padding: 10px;
+  box-shadow: 5px 5px 10px rgb(91, 0, 47);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.label {
+  padding-left: 20px;
+}
+
+.subscriptionGrid {
+  width: 85%;
+  padding-top: 50px;
+}
+
+#soFresh {
+  font-size: 30px;
+}
+
+.footer {
+  background-color: rgb(255, 255, 255);
+  height: 100px;
+  width: 100%;
+}
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+.button {
+  background-color: rgba(0, 0, 255, 0.181);
+  border-radius: 10px;
+  height: 20px;
+  width: 20px;
 }
