--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.default-blue-text {
+  font-size:20px;
+  font-weight: bold;
+  color: #0500ff;
+}
+
+span{
+  font-size: 40px;;
+  display: block;
+  position: relative;
+  font-weight: bold;
+  color: #0500ff;
+}
+
+
