--- a/src/SurveyPage/Survey.css
+++ b/src/SurveyPage/Survey.css
@@ -1,11 +1,8 @@
 .Survey {
     margin: auto;
-    height: 1000px;
-    width: 20%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 80%;
+    position: relative;
     padding: 10px;
 }
 
@@ -34,9 +31,11 @@ span{
 .survey-icon{
     position: relative;
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    margin: auto;
+    height: auto;
+    width: auto;
+    max-width: 400px;
+    max-height: 600px;
     top: 20%;
     padding: 40px;
 }
@@ -48,5 +47,5 @@ span{
     vertical-align: top;
     display: inline-block;
     text-align: center;
-    width: 600px;
+    width: 100%;
 }
