--- a/src/Account/AccountPage.css
+++ b/src/Account/AccountPage.css
@@ -1,6 +1,22 @@
 .AccountPage {
 	height: 100%;
 	color: #0500ff;
+	text-align: center;
+	font-family: 'Roboto';
+	background: #ffe7e7;
+	height: 100vh;
+	width: 100vw;
+	padding: 10px;
+	font-size: 20px;
+}
+
+*:focus {
+	outline: none;
+}
+
+.title {
+	font-weight: 900;
+	font-size: 5rem;
 }
 
 .btn {
@@ -12,6 +28,13 @@
 	margin-right: 0.5rem;
 	margin-left: 0.5rem;
 	font-weight: 500;
+
+	/* Removing button default style */
+	background: none;
+	color: inherit;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 
 	transition: box-shadow 0.5s;
 }
