added links to header

--- a/src/subscriptionsPage/Header.css
+++ b/src/subscriptionsPage/Header.css
@@ -19,6 +19,14 @@
   font-size: 30px;
 }
 
+#AllSubscriptions-K {
+  font-size: 15px;
+}
+
+#Account-K {
+  font-size: 15px;
+}
+
 .headerButtons-K {
   display: flex;
   align-items: center;
