--- a/src/Normalize.css
+++ b/src/Normalize.css
@@ -11,7 +11,7 @@
 html {
 	line-height: 1.15; /* 1 */
 	-webkit-text-size-adjust: 100%; /* 2 */
-	font-family: "Roboto" sans-serif;
+	font-family: "Roboto", sans-serif;
 	background: #ffe7e7;
 	color: #0500ff;
 }
